--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -206,9 +206,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'c_2017' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-13-326dcab77354>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mc_2017\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mLIST_TABLES_CMD\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mconn_2017\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcommit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mLIST_COLUMNS_CMD_2017\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"PRAGMA table_info('acs2017_county_data');\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'c_2017' is not defined"
+     ]
+    }
+   ],
    "source": [
     "c_2017.execute(LIST_TABLES_CMD)\n",
     "conn_2017.commit()\n",
@@ -225,18 +237,47 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# OLS workspace\n",
+    "- array with number of each race in a county (multiply percentage by total pop)\n",
+    "- array with total number of surveillance devices in a county (need SQL query for this)\n",
+    "    - SQL query to join "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Number of black people in each county\n",
+    "# black_2015\n",
+    "\n",
+    "# Feel free to change to demographic groups\n",
+    "cursor_2015_total_pop = conn_2015.cursor()\n",
+    "SELECT_TOTAL_POP_2015 = \"SELECT TotalPop from acs2015_county_data\"\n",
+    "cursor_2015_total_pop.execute(SELECT_TOTAL_POP_2015)\n",
+    "total_pop_2015 = [float(a[0]) for a in cursor_2015_total_pop]\n",
+    "total_pop_black_2015 = []\n",
+    "for i in range(len(total_pop_2015)) :\n",
+    "    total_pop_black_2015.append(total_pop_2015[i] * black_2015[i])"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# select *\n",
+    "# from Db1.dbo.Clients c\n",
+    "# join Db2.dbo.Messages m on c.ClientId = m.ClientId\n",
+    "\n",
+    "\n",
+    "JOIN_QUERY = 'SELECT * FROM '"
+   ]
   }
  ],
  "metadata": {
