Added OLS regression results

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +204,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.004\n",
       "Method:                 Least Squares   F-statistic:                     6.355\n",
       "Date:                Tue, 20 Oct 2020   Prob (F-statistic):             0.0118\n",
-      "Time:                        14:51:01   Log-Likelihood:                -4460.3\n",
+      "Time:                        16:03:49   Log-Likelihood:                -4460.3\n",
       "No. Observations:                1288   AIC:                             8925.\n",
       "Df Residuals:                    1286   BIC:                             8935.\n",
       "Df Model:                           1                                         \n",
@@ -229,7 +229,11 @@
    "source": [
     "# x should be number of a demographic group per county\n",
     "# y should be number of cameras found\n",
+    "\n",
+    "# map of county -> number of cameras in that county\n",
     "cameras_per_county = collections.Counter([row[2] for row in c_atlas])\n",
+    "\n",
+    "# map of county -> percentage of Black people in that county\n",
     "pop_black = {}\n",
     "c_atlas = conn_atlas.cursor()\n",
     "c_atlas.execute(JOIN_QUERY)\n",
@@ -241,8 +245,10 @@
     "x = []\n",
     "y = []\n",
     "for county_state in cameras_per_county :\n",
+    "    \n",
     "    y.append(cameras_per_county[county_state])\n",
     "    x.append(pop_black[county_state])\n",
+    "    \n",
     "x, y = np.array(x), np.array(y)\n",
     "x = sm.add_constant(x)\n",
     "model = sm.OLS(y, x)\n",
